# slack-sansio

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/: .dothub.repo.yml
docs/: Makefile  actions.rst  commands.rst  conf.py  environment.yml  events.rst  exceptions.rst  index.rst  methods.rst  requirements.txt  sansio.rst  testing.rst
docs/implementations/: abc.rst  aiohttp.rst  curio.rst  requests.rst  treq.rst  trio.rst
examples/: aiohttp_example.py  sync_example.py
examples/aiohttp/: iterate.py  query.py  rtm.py
examples/curio/: iterate.py  query.py
examples/requests/: iterate.py  query.py  rtm.py
examples/sync/: iterate.py  query.py  rtm.py
examples/treq/: query.py
examples/trio/: iterate.py  query.py
slack/: __init__.py  __version__.py  abc.py  actions.py  aiohttp.py  commands.py  events.py  exceptions.py  methods.py  sansio.py  sync.py  utils.py
slack/io/: abc.py  aiohttp.py  curio.py  requests.py  sync.py  treq.py  trio.py
slack/tests/: conftest.py  plugin.py  test.sh  test_actions.py  test_commands.py  test_events.py  test_examples.py  test_io.py  test_sansio.py
slack/tests/data/: __init__.py  actions.py  commands.py  events.py  methods.py
tests/: conftest.py  test_actions.py  test_commands.py  test_events.py  test_io.py  test_sansio.py
tests/data/: __init__.py  actions.py  channels.json  channels_iter.json  commands.py  events.py  methods.py
