[metadata]
description-file = README.rst

[tool:pytest]
addopts= --verbose --cov=slack/ --cov-report term-missing

[aliases]
doc=build_sphinx
test=pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1

[flake8]
ignore = E203
max-line-length = 120
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .tox
