[metadata]
description-file = README.rst

[tool:pytest]
addopts= --verbose --cov

[aliases]
doc=build_sphinx
test=pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1

[flake8]
ignore = E203
max-line-length = 120
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .tox

[coverage:run]
source = slack
omit = slack/tests/*
branch = true

[coverage:report]
show_missing = true

[mypy]
python_version = 3.7
ignore_missing_imports = True
#follow_imports=silent
incremental = True
